# chatbot-tlcn

./: .deepeval-cache.json  .deepeval_telemetry.txt  .dockerignore  .env.example  .gitignore  Dockerfile  Idea.txt  README.md  a.ipynb  alembic.ini  answers.jsonl  app.py  before_eval_set.csv  chainlit_app.py  constraints.txt  conversation_tone.json  converted_faqs.csv  converted_faqs.json  converted_faqs_710.json  converted_faqs_710_new.json  converted_hello_faqs.json  dataframe_output.csv  db.py  docker-compose.yml  env.py  eval.ipynb  eval_dataset.jsonl  eval_tone_test.ipynb  evaluate_faq.py  evaluate_laptop.py  evaluate_phone.py  evaluate_phone_lap.py  evaluate_tone.py  failed_addressing_analysis.json  failed_addressing_analysis_faq_3.json  faq_evaluation_results.csv  faq_testset.csv  fine_tune_tone_dataset.jsonl  fine_tune_tone_faq_3.json  fine_tune_tone_faq_3_dataset.jsonl  (+44 more)
.chainlit/: config.toml
.deepeval/: .deepeval_telemetry.txt
Xchatbot-tlcn_/: app.py  db.py  env.py
agents/: base.py  detect_demand.py  utils.py
alembic/: env.py
app/: 6a8864239fa3_edit_user_table.py  8a431df92395_create_laptop.py  main.py
chainlit_process/: authentication.py  data_layer.py  message.py
controllers/: fb_webhook.py  heatlh.py  home.py
exported_comments/: laptop_000560716967.json  laptop_010377146540.json  laptop_032855416896.json  laptop_041591837663.json  laptop_046353126540.json  laptop_052698224173.json  laptop_05920666137.json  laptop_059663525766.json  laptop_075352030049.json  laptop_084122414684.json  laptop_102151220935.json  laptop_106734414032.json  laptop_107396712966.json  laptop_108821314687.json  laptop_115811917354.json  laptop_120117528553.json  laptop_121144012382.json  laptop_12697098901.json  laptop_147341328969.json  laptop_153230525597.json  laptop_158367921039.json  laptop_162963412331.json  laptop_170116638221.json  laptop_174746436825.json  laptop_178210514203.json  laptop_183072621850.json  laptop_185178526193.json  laptop_189529426897.json  laptop_193908039653.json  laptop_202045110255.json  laptop_205585924565.json  laptop_221302828848.json  laptop_224036734846.json  laptop_227312011542.json  laptop_228257628029.json  laptop_230445027840.json  laptop_233353832963.json  laptop_234763512150.json  laptop_237340616366.json  laptop_252399529603.json  (+190 more)
fine-tuning/: README.md  check_jsonl.py  data_preparation_analysis_cost_for_finetune.ipynb  fine-tune-tone_v2.ipynb  fine-tune_tone.ipynb  fine_tune.ipynb  (+9 more)
(+188 files in other folders)
