[tool.poetry]
name = "chatbot-tlcn"
version = "0.1.0"
description = ""
authors = ["Nguyễn Tấn Phát <phat.techapollo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.44.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
nbconvert = "^7.16.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
